--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <form action="" class="order_form">
                 <div class="type"></div>
                 <div class="room_quantity"></div>
-                <button class="button order_button"></button>
+                <button  type="submit" class="button order_button"></button>
             </form>
         </div>
         <div class="sale_container">
