--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <div class="wrapper">
         <div class="section_header_container">
             <h1 class="section_header">Уборка квартир в Москве и Подмосковье
-                <span >Идеальный порядок каждую неделю</span>
+                <span>Идеальный порядок каждую неделю</span>
             </h1>
             <span class="green">от 1590 руб</span>
         </div>
-        <div class="order_form_container">
+        <div class="order_form_container box-shadow_container">
             <form action="" class="order_form">
                 <div class="type field">
                     <label for="type">Тип уборки</label>
@@ -78,7 +78,9 @@
             <div class="small_header">Про уборки</div>
         </div>
         <div class="tabs_container">
-            <div class="tabs_text">Клинер приедет со всем необходимым для уборки. Стоимость уборки рассчитывается от количества комнат.</div>
+            <div class="tabs_text">Клинер приедет со всем необходимым для уборки. Стоимость уборки рассчитывается от
+                количества комнат.
+            </div>
             <div class="tabs_text tabs_nav_container">
                 <span class="tabs_descriptiom">В каждый тариф входит уборка:</span>
                 <ul class="tabs_selectors">
@@ -103,8 +105,8 @@
                 </div>
             </div>
             <div class="cleaning_description">
-                <div class="ongoing cleaning">Поддерживающая уборка</div>
-                <div class="general cleaning">Генеральная уборка</div>
+                <div class=" cleaning"><span class="ongoing"></span> Поддерживающая уборка</div>
+                <div class=" cleaning"><span class="general"></span> Генеральная уборка</div>
             </div>
         </div>
     </div>
@@ -113,17 +115,219 @@
             <div class="small_header">Типы уборки</div>
         </div>
         <div class="types_of_cleaning__info_container">
-            <div class="types_of_cleaning__info">
-                <div class="ongoing cleaning">Поддерживающая</div>
+            <div class="types_of_cleaning__info box-shadow_container">
+                <div class="info_content">
+                    <div class="info_header">
+                        <div class=" cleaning"><span class="ongoing"></span> Поддерживающая</div>
+                    </div>
+                    <div class="info_list_container">
+                        <ul class="info_list">
+                            <li class="info_list_item">Протираем мебель сверху донизу</li>
+                            <li class="info_list_item">Чистим зеркала и стеклянные поверхности</li>
+                            <li class="info_list_item">Пылесосим ковры</li>
+                            <li class="info_list_item">Моем пол</li>
+                            <li class="info_list_item">Убираем мусор</li>
+                            <li class="info_list_item">Вычищаем пыль из углов</li>
+                            <li class="info_list_item">Протираем плинтусы</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="price_container">
+                    <div class="price">
+                        <div class="price_text">Стоимость уборки:
+                            <span>во всех комнатах</span>
+                        </div>
+                        <div class="price_amount">1590 руб.</div>
+                    </div>
+                    <div class="button order_button">Оформить заявку</div>
+                </div>
             </div>
-            <div class="types_of_cleaning__info">
-                <div class="general cleaning">Генеральная</div>
+            <div class="types_of_cleaning__info box-shadow_container">
+                <div class="info_content">
+                    <div class="info_header">
+                        <div class=" cleaning"><span class="general"></span>Генеральная</div>
+                    </div>
+                    <div class="info_list_container">
+                        <ul class="info_list">
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Протираем мебель сверху донизу
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Чистим зеркала и стеклянные поверхности
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Пылесосим ковры
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Моем пол
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Убираем мусор
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Вычищаем пыль из углов
+                            </li>
+                            <li class="info_list_item">
+                                <div class="check"></div>
+                                Протираем плинтусы
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="additional_list_container">
+                        <ul class="additional_list">
+                            <li class="list_header">Генеральная:</li>
+                            <li class="additional_item">Мойка радиатора отопления</li>
+                            <li class="additional_item">Очистка выключателей и дверных ручек</li>
+                            <li class="additional_item">Обеспыливание настенных светильников</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="price_container">
+                    <div class="price">
+                        <div class="price_text">Стоимость уборки:
+                            <span>во всех комнатах</span>
+                        </div>
+                        <div class="price_amount">1990 руб.</div>
+                    </div>
+                    <div class="button order_button">Оформить заявку</div>
+                </div>
+            </div>
+        </div>
+        <div class="counter_container box-shadow_container">
+            <div class="counter">
+                <div class="counter_item">
+                    <div class="counter_name">Счетчик OZOZZON</div>
+                    <div class="counter_date">23 июня 2017</div>
+                </div>
+                <div class="counter_item">
+                    <div class="counter_numbers">16882</div>
+                    <div class="counter_description">Квартир убрано</div>
+                </div>
+                <div class="counter_item">
+                    <div class="counter_numbers">17</div>
+                    <div class="counter_description">Сегодня в работе</div>
+                </div>
+                <div class="counter_item">
+                    <div class="counter_numbers">2</div>
+                    <div class="counter_description">Свободные клинеры</div>
+                </div>
             </div>
         </div>
     </div>
-
 </section>
-
+<section class="bullet_section">
+    <div class="wrapper">
+        <div class="small_header_container">
+            <div class="small_header">Вы обязательно останетесь довольны, ведь мы...</div>
+        </div>
+        <div class="bullets_container">
+            <ul class="bullets">
+                <li class="bullet">
+                    <div class="bullet_image">
+                        <img src="src/img/plant.png" alt="">
+                    </div>
+                    <div class="bullet_text">Используем только
+                        уникальные экологичные
+                        средства
+                    </div>
+                </li>
+                <li class="bullet">
+                    <div class="bullet_image">
+                        <img src="src/img/form.png" alt="">
+                    </div>
+                    <div class="bullet_text">Отбираем только самых
+                        лучших клинеров
+                    </div>
+                </li>
+                <li class="bullet">
+                    <div class="bullet_image">
+                        <img src="src/img/bubble.png" alt="">
+                    </div>
+                    <div class="bullet_text">Используем особо
+                        эффективную технологию
+                        уборки
+                    </div>
+                </li>
+                <li class="bullet">
+                    <div class="bullet_image">
+                        <img src="src/img/heart.png" alt="">
+                    </div>
+                    <div class="bullet_text">Очень любим наших
+                        клиентов и предоставляем
+                        скидки
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<section class="FAQ">
+    <div class="wrapper">
+        <div class="small_header_container">
+            <div class="small_header">Часто задаваемые вопросы</div>
+        </div>
+        <div class="FAQ_tabs_container">
+            <div class="question_groups">
+                <div class="question_group box-shadow_container">
+                    <div class="group_name">По оплате</div>
+                    <div class="group_image">
+                        <img src="src/img/payment.svg" alt="">
+                    </div>
+                </div>
+                <div class="question_group box-shadow_container active_group">
+                    <div class="group_name">По уборке</div>
+                    <div class="group_image">
+                        <img src="src/img/swipe.svg" alt="">
+                    </div>
+                </div>
+                <div class="question_group box-shadow_container">
+                    <div class="group_name">По персоналу</div>
+                    <div class="group_image">
+                        <img src="src/img/staff.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="question_tabs box-shadow_container">
+                <div class="question_tab"></div>
+                <div class="question_tab active_question_tab">
+                    <ol class="question_list">
+                        <li class="question"><span>Что входит в Ваши уборки?</span></li>
+                        <li class="question"><span>Обязательно ли мое присутствие?</span></li>
+                        <li class="question"><span>Чем вы убираетесь?</span></li>
+                        <li class="question"><span>Что нужно предоставить клинеру для уборки?</span></li>
+                        <li class="question"><span>Клинеру нужны чистые тряпочки?</span></li>
+                        <li class="question"><span>Могу ли я дать клинеру чаевые? Должен ли я предупреждать вас об этом?</span></li>
+                        <li class="question"><span>У меня большая квартира. Как её считать?</span></li>
+                        <li class="question"><span>Делаете ли вы уборку в выходные?</span></li>
+                        <li class="question"><span>Выезжаете ли вы в область за МКАД?</span></li>
+                        <li class="question"><span>Что такое подписка и в чем ее преимущество?</span></li>
+                        <li class="question"><span>Чем вы не занимаетесь?</span></li>
+                    </ol>
+                </div>
+                <div class="question_tab"></div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="reviews">
+    <div class="wrapper">
+        <div class="small_header_container">
+            <div class="small_header">Отзывы</div>
+        </div>
+        <div class="slider_container">
+            <div class="slide">
+                <img src="" alt="" class="slide_image">
+            </div>
+        </div>
+        <div class="button reviews_button">все отзывы</div>
+    </div>
+</section>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="src/js/slick/slick.min.js"></script>
